# xmj

./: .mcp.json  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build-wasm.sh
.claude/: design.md  todo.md  vision.md
src/: ai.rs  game.rs  hand.rs  lib.rs  main.rs  nostr.rs  player.rs  scoring.rs  tile.rs  wasm.rs  wasm_nostr.rs  wasm_webrtc.rs
web/: README.md  debug.html  hybrid.html  index.html  matchmaking.html
