[package]
name = "xmj"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
description = "邪雀 Xtreme Mahjong - A mahjong game with occult and extreme rules"

[dependencies]
rand = "0.8"
nostr-sdk = { version = "0.36", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
nostr = ["nostr-sdk", "tokio"]

[[bin]]
name = "xmj"
path = "src/main.rs"

[lib]
name = "xmj_core"
path = "src/lib.rs"
