[package]
name = "xmj"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
description = "邪雀 Xtreme Mahjong - A mahjong game with occult and extreme rules"

[dependencies]
rand = "0.8"
nostr-sdk = { version = "0.36", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = []
nostr = ["nostr-sdk", "tokio"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[[bin]]
name = "xmj"
path = "src/main.rs"

[lib]
name = "xmj_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
